replaced whitespace with ASCII character code & fixed 'margin:' in the relevant .less file

--- a/r2/r2/public/static/css/goldinfo.less
+++ b/r2/r2/public/static/css/goldinfo.less
@@ -129,7 +129,7 @@ section#about-gold {
 
         .or {
             font-size: 18px;
-            margin: 0 16px;
+            margin: 0 16px 0 10px;
         }
     }
 
